# wasml

./: README.md
papers/: .gitignore  dataframe,preprocessing,clustering.tex  ndarray,classification,regression.tex  ndarray.tex
wasml/dataframes/: Cargo.toml  build.sh
wasml/dataframes/src/: lib.rs
wasml/dataframes/src/dataframe/: basic.rs  dataframe.rs  maths.rs  mod.rs  todo.md
wasml/dataframes/src/one_dimensional/floats/: basic.rs
wasml/dataframes/src/series/: mod.rs  series_f64.rs  series_i32.rs
wasml/dataframes/src/series/floats/: maths.rs  mod.rs  series_f64.rs  todo-floats.md
wasml/dataframes/src/series/integers/: math.rs  mod.rs  series_i32.rs  todo-integers.md
wasml/dataframes/src/series/strings/: mod.rs  series_str.rs
wasml/dataframes/web/: index.html  index.js
wasml/linalg/src/one_dimensional/integers/: mod.rs
wasml/linalg/src/two_dimensional/floats/: stats.rs
wasml/linalg/web/js/index/: two.js
wasml/matrices/: Cargo.toml  build.sh
wasml/matrices/src/: lib.rs  utils.rs
wasml/matrices/src/one_dimensional/: floats.rs  integers.rs  mod.rs  strings.rs
wasml/matrices/src/one_dimensional/floats/: basic.rs  basic_math.rs  math.rs  mod.rs  wasm.rs
wasml/matrices/src/one_dimensional/integers/: basic.rs  basic_math.rs  math.rs  mod.rs  wasm.rs
wasml/matrices/src/one_dimensional/strings/: basic.rs  mod.rs  wasm.rs
wasml/matrices/web/: index.html  index.js
wasml/ndarrays/: Cargo.toml  README.md  build.sh
wasml/ndarrays/src/: lib.rs
wasml/ndarrays/src/one_dimensional/floats/: basic.rs  math.rs  mod.rs  wasm.rs
wasml/ndarrays/src/one_dimensional/integers/: basic.rs  math.rs  mod.rs  wasm.rs
wasml/ndarrays/src/one_dimensional/strings/: basic.rs  mod.rs  wasm.rs
wasml/ndarrays/src/two_dimensional/: mod.rs
wasml/ndarrays/src/two_dimensional/floats/: basic.rs  math.rs  mod.rs  stats.rs  wasm.rs
wasml/ndarrays/src/two_dimensional/macros/: basic.rs
wasml/ndarrays/web/: index.html  index.js  interactive.html  matrix_multiplication.js
wasml/ndarrays/web/css/: interactive.css
wasml/ndarrays/web/js/: index.js  matrix_multiplication.js
wasml/ndarrays/web/js/index/: index.js  matmul.js  one.js  two.js
wasml/ndarrays/web/js/interactive/: display.js  main.js
wasml/watrix/: Cargo.toml
wasml/watrix/cmds/: build_web.bat  build_web.sh
wasml/watrix/src/: lib.rs
wasml/watrix/web/: index.html  index.js
