[package]
name = "watrix"
version = "0.1.0"
authors = ["Archit Bhonsle <abhonsle2000@gmail.com>"]
edition = "2018"
description = "WebAssembly implementation of vectors and matrices"
repository = "https://github.com/wasml/wasml"
license = "APACHE"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
